2022-11-05 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: new version 3.2.3
	* src/*.[hc]: Thoroughly removed trailing spaces

2022-06-21 Massimo Manghi <mxmanghi@apache.org>
	* Changelog: logging release of Rivet 3.2.2.

2022-06-10 Massimo Manghi <mxmanghi@apache.org>
	* doc/xml/directives.xml: moved misplaced text in table
	* configure.ac: Changed default for HonorHeadRequests to 'yes'
	* src/mod_rivet_ng/mod_rivet_generator.c: rephrased comment documenting
	the exit handler behavior

2022-05-31 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/*.c: Directive HonorHeaderOnlyReqs renamed as
	HonorHeadRequests, which sounds more consistent with the common parlance 
	regarding HTTP

2022-03-01 Massimo Manghi <mxmanghi@apache.org>
	* tests/getall.rvt: add new test for the 2 forms of [::rivet::var_qs all]

2022-02-19 Massimo Manghi <mxmanghi@apache.org>
	* tclconfig/tcl.m4: patched tcl.m4 distributed by core.tcl.tk as it doesn't work
	  with Makefile.am files in nested directories. Patch submitted upstream 
	* tclconfig/: commit several autoconf generated scripts
	* m4/: add new files automatically copied by autoconf

2022-02-18 Massimo Manghi <mxmanghi@apache.org>
	* src/TclWeb.h: Add copyright notice, remove SVN id keyword
	* rivet/rivet-tcl/xml.tcl: correct wrong comment showing command xml arguments
	* src/mod_rivet_ng/rivet_lazy_mpm.c: adopting boolean values defined in bool.h
	* src/mod_rivet_ng/mod_rivet.[c|h]: expand comments, fix typo
	* rivet/packages/form/form22.tcl: Using ::rivet::xml instead of the class method argstring

2022-02-14 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetCore.c: New feature of the '::rivet::var all' commands.
	An extra optional argument is interpreted as a dictionary of default values 
	* tclconfig/tcl.m4,tclconfig/install-sh: install latest version from Tclconfig repository
	* doc/xml/commands.xml: update page manual for ::rivet::var

2022-02-13 Massimo Manghi <mxmanghi@apache.org>